--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
-          <li><a href="#project">Project</a></li>
+          <li><a href="#projects">Project</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -31,7 +31,7 @@
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
           <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-          <li><a href="#project" onclick="toggleMenu()">Project</a></li>
+          <li><a href="#projects" onclick="toggleMenu()">Project</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
@@ -76,7 +76,7 @@
     <section id="about">
       <p class="section_text_p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
-      <div class="social-container">
+      <div class="section-container">
         <div class="section_pic-container">
           <img
             src="./assets/about-pic.png"
@@ -343,7 +343,106 @@
         src="./assets/arrow.png"
         alt="arrow icon"
         class="icon arrow"
-        onclick="location.href='./#project'"
+        onclick="location.href='./#projects'"
+      />
+    </section>
+    <!-- Projects  -->
+    <section id="projects">
+      <p class="section_text_p1">Browse My Recent</p>
+      <h1 class="title">Projects</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <!-- Project 1 -->
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/walmart_project.png"
+                alt="project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              Walmart Sales Prediction
+            </h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
+              >
+                Github
+              </button>
+              <!-- Add link to live demo if deployed -->
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <!-- Project 2 -->
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/walmart_project.png"
+                alt="project 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              Walmart Sales Prediction
+            </h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
+              >
+                Github
+              </button>
+              <!-- Add link to live demo if deployed -->
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <!-- Project 3 -->
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/walmart_project.png"
+                alt="project 3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              Walmart Sales Prediction
+            </h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
+              >
+                Github
+              </button>
+              <!-- Add link to live demo if deployed -->
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#contact'"
       />
     </section>
     <script src="script.js"></script>
