--- a/index.html
+++ b/index.html
@@ -372,12 +372,12 @@
                 Github
               </button>
               <!-- Add link to live demo if deployed -->
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
           <!-- Project 2 -->
@@ -445,6 +445,51 @@
         onclick="location.href='./#contact'"
       />
     </section>
+    <!-- Contact  -->
+    <section id="contact">
+      <p class="section_text_p1">Get in Touch</p>
+      <h1 class="title">Contact Me</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/email.png"
+            alt="email icon"
+            class="icon contact-icon email-icon"
+          />
+          <p>
+            <a href="mailto:kratiichoudhary@gmail.com">
+              kratiichoudhary@gmail.com
+            </a>
+          </p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="linkedin icon"
+            class="icon contact-icon"
+          />
+          <p>
+            <a href="https://www.linkedin.com/in/krati-choudhary-015430192/">
+              Linkedin
+            </a>
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- Footer  -->
+    <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Project</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; 2023 Krati Choudhary. All rights reserved.</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
