--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
       </div>
       <div class="section_text">
         <p class="section_text_p1">Hello I'm</p>
+        <!-- <div class="console-container">
+          <span id="text"></span>
+          <h1 class="console-underscore" id="console">&#95;</h1>
+        </div> -->
         <h1 class="title">Krati Choudhary</h1>
         <p class="section_text_p2">Developer</p>
         <div class="btn-container">
@@ -50,7 +54,7 @@
             class="btn btn-color-2"
             onclick="window.open('./assets/krati_choudhary_cv.pdf')"
           >
-            Download Resume
+            Download CV
           </button>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contact Me
@@ -116,15 +120,18 @@
               I am a passionate and results-driven Software Developer and Data
               Analyst with a strong background in developing innovative
               solutions and leveraging data insights to drive business growth.
+              <br />
               With a keen eye for detail and a drive for excellence, I take
               pride in my ability to create efficient systems that deliver
-              tangible results. Currently, pursuing Masters in Computer Science
-              program at Indiana University Bloomington with study domains like
-              Computer Vision, Data Mining, and Problem Solving and will
-              graduate in May 2024. As a Software Developer and Data Analyst, I
-              thrive in dynamic and collaborative environments, where I can
-              apply my analytical skills and technical expertise to solve
-              complex problems and drive business success.
+              tangible results. <br />
+              Currently, pursuing Masters in Computer Science program at Indiana
+              University Bloomington with study domains like Computer Vision,
+              Data Mining, and Problem Solving and will graduate in May 2024.
+              <br />
+              As a Software Developer and Data Analyst, I thrive in dynamic and
+              collaborative environments, where I can apply my analytical skills
+              and technical expertise to solve complex problems and drive
+              business success.
             </p>
           </div>
         </div>
@@ -137,10 +144,109 @@
         onclick="location.href='./#experience'"
       />
     </section>
+    <!-- Projects  -->
+    <section id="projects">
+      <p class="section_text_p1">Browse My Recent</p>
+      <h1 class="title">Projects</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <!-- Project 1 -->
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/walmart_project.png"
+                alt="project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              Walmart Sales Prediction
+            </h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
+              >
+                Github
+              </button>
+              <!-- Add link to live demo if deployed -->
+              <!-- <button
+                    class="btn btn-color-2 project-btn"
+                    onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
+                  >
+                    Live Demo
+                  </button> -->
+            </div>
+          </div>
+          <!-- Project 2 -->
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/walmart_project.png"
+                alt="project 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              Walmart Sales Prediction
+            </h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
+              >
+                Github
+              </button>
+              <!-- Add link to live demo if deployed -->
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <!-- Project 3 -->
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/walmart_project.png"
+                alt="project 3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              Walmart Sales Prediction
+            </h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
+              >
+                Github
+              </button>
+              <!-- Add link to live demo if deployed -->
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+      />
+    </section>
     <!-- Experience Section  -->
     <section id="experience">
       <p class="section_text_p1">Explore my</p>
-      <h1 class="title">Experience</h1>
+      <h1 class="title">Skills</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <!-- Web Development  -->
@@ -343,108 +449,10 @@
         src="./assets/arrow.png"
         alt="arrow icon"
         class="icon arrow"
-        onclick="location.href='./#projects'"
-      />
-    </section>
-    <!-- Projects  -->
-    <section id="projects">
-      <p class="section_text_p1">Browse My Recent</p>
-      <h1 class="title">Projects</h1>
-      <div class="experience-details-container">
-        <div class="about-containers">
-          <!-- Project 1 -->
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/walmart_project.png"
-                alt="project 1"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">
-              Walmart Sales Prediction
-            </h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
-              >
-                Github
-              </button>
-              <!-- Add link to live demo if deployed -->
-              <!-- <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
-              >
-                Live Demo
-              </button> -->
-            </div>
-          </div>
-          <!-- Project 2 -->
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/walmart_project.png"
-                alt="project 2"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">
-              Walmart Sales Prediction
-            </h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
-              >
-                Github
-              </button>
-              <!-- Add link to live demo if deployed -->
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
-              >
-                Live Demo
-              </button>
-            </div>
-          </div>
-          <!-- Project 3 -->
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/walmart_project.png"
-                alt="project 3"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">
-              Walmart Sales Prediction
-            </h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
-              >
-                Github
-              </button>
-              <!-- Add link to live demo if deployed -->
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
-              >
-                Live Demo
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <img
-        src="./assets/arrow.png"
-        alt="arrow icon"
-        class="icon arrow"
         onclick="location.href='./#contact'"
       />
     </section>
+
     <!-- Contact  -->
     <section id="contact">
       <p class="section_text_p1">Get in Touch</p>
