--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Profile Section -->
     <section id="profile">
       <div class="section_pic-container">
-        <img src="./assets/profile-pic.png" alt="Krati profile picture" />
+        <img src="./assets/profile-pic-2.png" alt="Krati profile picture" />
       </div>
       <div class="section_text">
         <p class="section_text_p1">Hello I'm</p>
