about section changes

--- a/index.html
+++ b/index.html
@@ -124,9 +124,16 @@
               With a keen eye for detail and a drive for excellence, I take
               pride in my ability to create efficient systems that deliver
               tangible results. <br />
-              Currently, pursuing Masters in Computer Science program at Indiana
-              University Bloomington with study domains like Computer Vision,
-              Data Mining, and Problem Solving and will graduate in May 2024.
+              I graduated in May 2024 from a Masters in Computer Science program
+              at Indiana University Bloomington with study domains like Computer
+              Vision, Data Mining, and Problem Solving.
+              <br />
+              Curently, I am working as a Database Engineer at Hughes Network
+              System working with large enterprise databases on tasks such as
+              automating the process of maintaining databases using shell
+              scripts and monitoring tools such as Foglight and OEM, while also
+              analysing data across different databases such as Oracle, MongoDB,
+              Postgres and MySQL.
               <br />
               As a Software Developer and Data Analyst, I thrive in dynamic and
               collaborative environments, where I can apply my analytical skills
