--- a/index.html
+++ b/index.html
@@ -120,21 +120,21 @@
               I am a passionate and results-driven Software Developer and Data
               Analyst with a strong background in developing innovative
               solutions and leveraging data insights to drive business growth.
-              <br />
+              <br /><br />
               With a keen eye for detail and a drive for excellence, I take
               pride in my ability to create efficient systems that deliver
-              tangible results. <br />
+              tangible results. <br /><br />
               I graduated in May 2024 from a Masters in Computer Science program
               at Indiana University Bloomington with study domains like Computer
               Vision, Data Mining, and Problem Solving.
-              <br />
+              <br /><br />
               Curently, I am working as a Database Engineer at Hughes Network
               System working with large enterprise databases on tasks such as
               automating the process of maintaining databases using shell
               scripts and monitoring tools such as Foglight and OEM, while also
               analysing data across different databases such as Oracle, MongoDB,
               Postgres and MySQL.
-              <br />
+              <br /><br />
               As a Software Developer and Data Analyst, I thrive in dynamic and
               collaborative environments, where I can apply my analytical skills
               and technical expertise to solve complex problems and drive
