--- a/index.html
+++ b/index.html
@@ -195,22 +195,22 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">
-              Walmart Sales Prediction
+              Customer LTE Usage Analysis
             </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
+                onclick="location.href='https://github.com/kratichoudhary25/LTE_Usage_Analysis'"
               >
                 Github
               </button>
               <!-- Add link to live demo if deployed -->
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
           <!-- Project 3 -->
