commented third project section

--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@
               <!-- Add link to live demo if deployed -->
               <!-- <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
+                onclick="window.open('./assets/LTE_demo')"
               >
-                Live Demo
+                Video Demo
               </button> -->
             </div>
           </div>
           <!-- Project 3 -->
-          <div class="details-container color-container">
+          <!-- <div class="details-container color-container">
             <div class="article-container">
               <img
                 src="./assets/walmart_project.png"
@@ -238,7 +238,7 @@
                 onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
         </div>
