--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/walmart_project.png"
+                src="./assets/LTE_usage.png"
                 alt="project 2"
                 class="project-img"
               />
@@ -231,9 +231,9 @@
                 onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
               >
                 Github
-              </button>
+              </button> -->
               <!-- Add link to live demo if deployed -->
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/kratichoudhary25/Walmart-sales'"
               >
