arrow pointer location

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         src="./assets/arrow.png"
         alt="arrow icon"
         class="icon arrow"
-        onclick="location.href='./#experience'"
+        onclick="location.href='./#projects'"
       />
     </section>
     <!-- Projects  -->
